--- a/data/66b29a0613dda0203eaf6e3f/app.json
+++ b/data/66b29a0613dda0203eaf6e3f/app.json
@@ -1,15 +1,14 @@
 {
   "expo": {
-    "name": "p-loja-eletronicos",
-    "slug": "p-loja-eletronicos",
+    "name": "p-loja-fulano",
+    "slug": "p-loja-fulano",
     "version": "1.0.0",
-    "scheme": "p-loja-eletronicos",
+    "scheme": "p-loja-fulano",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -20,8 +19,7 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      },
-      "edgeToEdgeEnabled": true
+      }
     },
     "web": {
       "favicon": "./assets/favicon.png"
